# vision_for_mobile_robotics

./: README.md
ex1/: CMakeLists.txt
ex1/src/: file_manager.cpp  main.cpp  rotation_parametrizations.cpp  utils.cpp
ex2/: Dockerfile
project_template/: CMakeLists.txt  Dockerfile
project_template/src/: main.cpp
